fixed alignment issue on the game sessions page

--- a/app/assets/stylesheets/z_defaults.scss
+++ b/app/assets/stylesheets/z_defaults.scss
@@ -7,7 +7,7 @@ h5, h6 {
   padding: 2rem;
 }
 
-form {
+.login {
   padding: 0 4rem;
 }
 
